--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
         <div class="header-content">
             <!-- Add your profile picture here -->
             <img src="passport photo.jpg" alt="Your Profile Picture" class="profile-picture">
-            <h1>Pranesh S</h1>
-            <p>Am Mechanical Engineer</p>
+            <h1>Vignesh S</h1>
+            <p>Am Computer Application</p>
         </div>
     </header>
 
@@ -115,12 +115,8 @@
     <section id="about">
         <div class="section-content">
             <h2>About Me</h2>
-            <p>I'm a <b>web development</b> expert who is passionate about creating dynamic and user-friendly websites. 
-                I'm driven by the desire to craft high-performance web applications that enhance user experience and provide
-                 seamless digital solutions. With over 7 years of experience in the field, I'm dedicated to staying up to date 
-                 with the latest trends and innovations in the 
-                 web development landscape. I'm also committed to helping others learn more about web technologies, 
-                 best practices, and how to build secure and scalable websites.</p>
+            <p>*I am Vignesh S passionate computer application student currently pursuing my bachelor of computer application BCA at Madaras University with a intrest in technology and programming. I strive to build a solid foundation in computer science principles and praticals skills that will help me make a meaning full impact in the tech world. 
+I am committed to continues learning, colobrating with others and applying my skills to real world challanges. My intrest Web Development, Artifical Intelligence(AI), Software Development, Internet Of Things(IOT), Editing and i aim to contribute positively to the world through technology.</p>
 
         </div>
     </section>
@@ -128,7 +124,7 @@
     <section id="education">
         <div class="section-content">
             <h2>Education</h2>
-            <p>Deemed University  - Mech</p>
+            <p>Madras university - BCA</p>
             
             
         </div>
@@ -176,7 +172,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Pranesh S</p>
+        <p>&copy; 2025 Vignesh S</p>
     </footer>
 
     <script>
