--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ I am committed to continues learning, colobrating with others and applying my sk
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="file.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="Vignesh S.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
